2005-08-03  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/lilypond-book.itely (An example of a
	musicological document): Added flag -o to dvips for people who use
	the default setting in teTeX where output is sent to the printer. 

	* Documentation/user/global.itely (Vertical spacing): Added
	reference to the Axis_group_engraver which documents the *Extent
	properties.

	* Documentation/user/programming-interface.itely (Markup
	construction in Scheme): Corrected markup syntax in the
	translation table.

2005-08-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION (PACKAGE_NAME): release 2.6.2

	* lily/ly-module.cc (make_stand_in_procs_weak): new
	function. Backport.
	
2005-07-30  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/include/ly-module.hh (ly_use_module): fix prototype.

2005-07-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* mf/feta-bolletjes.mf: swap up and down fa head
	
2005-07-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/main.cc (setup_guile_env): backport: tweak GC settings to
	improve performance.
	(setup_guile_env): set init heap sizes to 16/1 mb. Decreases
	number of segments.

	* lily/ly-module.cc (LY_DEFINE): backport:
	ly_clear_anonymous_modules(). Kludge to plug memory leak in GUILE. 

2005-07-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/output-lib.scm (tablature-stem-attachment-function): stem
	attachment backport.
	
	* scm/define-grobs.scm (all-grob-descriptions): font size backport
	for tab notehead.

2005-07-20  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/lily.scm (running-from-gui?): Always write to .log file on
	dos-based windows.

2005-07-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc (main): Remove invalid handle kludge.

	* scm/lily.scm (running-from-gui?): WINDOWS: check -dgui.
	(lambda): add gui define.

2005-07-15  Graham Percuval  <gperlist@shaw.ca>

	* Documentation/user/ <various>: backported stuff.

2005-07-11  Han-Wen Nienhuys  <hanwen@xs4all.nl>
