@@ -1,21 +1,3 @@
-Release 2.7
-***********
-
-DEVELOPMENT TEAM
-
-Han-Wen Nienhuys  - Core development
-Jan Nieuwenhuizen - Core development
-Erik Sandberg     - Bug Meister
-Pedro Kroger      - Build Meister
-Graham Percival   - Documentation Editor
-
-
-SPONSORS
-
-Sven Axelsson
-
-
-
 Release 2.6
 ***********
 
@@ -92,6 +74,7 @@ Bruce McIntyre
 Bruce Fairchild
 Daniel Johnson
 David Rogers
+Donald Axel
 Dylan Nicholson
 Ed Jackson
 Erik Ronström
