@@ -1,3 +1,8 @@
+2005-08-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+ 
+	* lily/auto-beam-engraver.cc (derived_mark): new method. Yes. We
+	have to protect even those unlikely-to-be-corrupted data members.  
+  
 2005-08-03  Mats Bengtsson  <mabe@drongo.s3.kth.se>
 
 	* Documentation/user/lilypond-book.itely (An example of a
